--- a/doc/isbi/spconf.sty
+++ b/doc/isbi/spconf.sty
@@ -228,7 +228,7 @@
 \if@preprint\ps@preprint
 \else\ps@empty\flushbottom\fi
 
-\def\thebibliography#1{\section{References}\list
+\def\thebibliography#1{\section{References}\small\list
  {[\arabic{enumi}]}{\settowidth\labelwidth{[#1]}\leftmargin\labelwidth
  \advance\leftmargin\labelsep
  \usecounter{enumi}}
